unpackaged/main/default/objects/OrderDeliveryMethod/OrderDeliveryMethod.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>