unpackaged/main/default/objects/OrderDeliveryMethod/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <description>IF YOU UPDATE THE PICKLIST VALUES : remember to also update the related formula fields isHomeDelivery__c and isStorePickup__c</description>
    <label>Delivery Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Delivery</fullName>
                <default>true</default>
                <label>Home Delivery</label>
            </value>
            <value>
                <fullName>Store Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>