unpackaged/main/default/objects/OrderDeliveryMethod/fields/isHomeDelivery__c.field-meta.xml
<CustomField>
    <fullName>isHomeDelivery__c</fullName>
    <formula>ISPICKVAL(  Delivery_Type__c , &quot;Home Delivery&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Delivery</label>
    <type>Checkbox</type>
</CustomField>