unpackaged/main/default/objects/OrderDeliveryMethod/fields/isStorePickup__c.field-meta.xml
<CustomField>
    <fullName>isStorePickup__c</fullName>
    <formula>ISPICKVAL(  Delivery_Type__c , &quot;Store Pickup&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Pickup</label>
    <type>Checkbox</type>
</CustomField>