unpackaged/main/default/objects/OrderDeliveryMethod/fields/wmsCode__c.field-meta.xml
<CustomField>
    <fullName>wmsCode__c</fullName>
    <label>wmsCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>