unpackaged/main/default/objects/OrderDeliveryMethod/validationRules/Check_Name_and_Ref_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Name_and_Ref_number</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Name !=  ReferenceNumber , true, false)</errorConditionFormula>
    <errorMessage>The Name and the Reference Number must be identical!</errorMessage>
</ValidationRule>