unpackaged/main/default/objects/OrderDeliveryMethod/listViews/All_Delivery_Method.listView-meta.xml
<ListView>
    <fullName>All_Delivery_Method</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>Product</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Delivery Methods</label>
</ListView>